welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: value avance is not a member of Unit
    droite() avance();
             ^BDRBuggle:6: error: value avance is not a member of Unit
    gauche() avance();
             ^BDRBuggle:8: error: value droite is not a member of Unit
    droite() droite() avance();
             ^BDRBuggle:12: error: value avance is not a member of Unit
    avance() avance();
             ^BDRBuggle:14: error: value avance is not a member of Unit
    avance() avance() avance();
             ^BDRBuggle:18: error: value recule is not a member of Unit
    recule() recule();
             ^BDRBuggle:20: error: value recule is not a member of Unit
    recule() recule() recule();
             ^